# fuel-rust-indexer

./: Cargo.toml  README.md  fuel-toolchain.toml
artifacts/: receipts.json
crates/event_streams/: Cargo.toml  adapters.rs  lib.rs  service.rs
crates/event_streams/processors/: mod.rs  receipt_parser.rs  simple_processor.rs
crates/events_manager/: Cargo.toml  lib.rs  port.rs  rocksdb.rs  service.rs  storage.rs
crates/indexer/: Cargo.toml  adapters.rs  indexer.rs  lib.rs
crates/indexer/processors/: receipt_parser.rs
crates/indexer/processors/receipt_parser/: order-book-abi.json
crates/receipts_manager/: Cargo.toml  lib.rs  port.rs  rocksdb.rs  service.rs  storage.rs
crates/receipts_manager/adapters/: client_ext.rs  concurrent_stream.rs  concurrent_unordered_stream.rs  graphql_event_adapter.rs  hybrid_fetcher.rs  mod.rs  multi_source_fetcher.rs  resizable_buffered.rs  resizable_buffered_unordered.rs  rpc_event_adapter.rs  subscription_router.rs
crates/receipts_manager/adapters/graphql_event_adapter/: fuel_core_mock.rs  tests.rs
crates/receipts_manager/service/: service_tests.rs
crates/storage_utils/: Cargo.toml  in_memory_storage.rs  lib.rs  rocksdb.rs
crates/types/: Cargo.toml  events.rs  lib.rs
tests/: Cargo.toml  logs_indexer.rs  mod.rs  rollback.rs  rpc_sync.rs
