[workspace]
resolver = "2"
members = [
    "crates/event_streams",
    "crates/events_manager",
    "crates/receipts_manager",
    "crates/storage_utils",
    "crates/types",
    "tests",
]

[workspace.package]
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2024"
homepage = "https://fuel.network/"
license = "Apache-2.0"
rust-version = "1.86.0"
readme = "README.md"
version = "0.0.1"

[workspace.dependencies]
anyhow = "1.0.66"
async-trait = { version = "0.1" }
clap = { version = "4", default-features = false, features = ["derive"] }
enum-iterator = { version = "1.2" }
fuel-core = { git = "https://github.com/FuelLabs/fuel-core", branch = "master" }
fuel-core-chain-config = { git = "https://github.com/FuelLabs/fuel-core", branch = "master" }
fuel-core-client = { git = "https://github.com/FuelLabs/fuel-core", branch = "master" }
fuel-core-services = { git = "https://github.com/FuelLabs/fuel-core", branch = "master" }
fuel-core-storage = { git = "https://github.com/FuelLabs/fuel-core", branch = "master" }
fuel-core-types = { git = "https://github.com/FuelLabs/fuel-core", branch = "master" }
fuel-event-streams = { path = "crates/event_streams" }
fuel-events-manager = { path = "crates/events_manager" }
fuel-indexer-types = { path = "crates/types" }
fuel-receipts-manager = { path = "crates/receipts_manager" }
fuel-storage-utils = { path = "crates/storage_utils" }
fuels = { version = "0.76.0" }
futures = "0.3"
serde = { version = "1" }
strum = { version = "0.25" }
strum_macros = { version = "0.25" }
tokio = { version = "1.48.0" }
tracing = "0.1"
url = "2"

[patch.crates-io]
fuels = { git = "https://github.com/FuelLabs/fuels-rs/", branch = "refactor/connect-with-urls-accept-str-slice" }
fuel-core = { git = "https://github.com/FuelLabs/fuel-core", branch = "master" }
fuel-core-chain-config = { git = "https://github.com/FuelLabs/fuel-core", branch = "master" }
fuel-core-client = { git = "https://github.com/FuelLabs/fuel-core", branch = "master" }
fuel-core-services = { git = "https://github.com/FuelLabs/fuel-core", branch = "master" }
fuel-core-storage = { git = "https://github.com/FuelLabs/fuel-core", branch = "master" }
fuel-core-types = { git = "https://github.com/FuelLabs/fuel-core", branch = "master" }
