[package]
name = "integration-tests"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false

[lib]
path = "mod.rs"

[dev-dependencies]
fuel-core = { workspace = true, features = ["test-helpers"] }
fuel-event-streams = { workspace = true, features = ["rocksdb", "blocks-subscription"] }
fuels = { workspace = true }
serde = { workspace = true }
tempdir = "0.3"
tokio = { workspace = true, features = ["rt-multi-thread"] }
url = { workspace = true }
