[package]
name = "fuel-event-streams"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
path = "lib.rs"

[features]
rocksdb = [
    "dep:fuel-core",
    "fuel-core/rocksdb-production",
    "fuel-receipts-manager/rocksdb",
    "fuel-events-manager/rocksdb",
]
blocks-subscription = ["fuel-receipts-manager/blocks-subscription"]
clap = ["fuel-receipts-manager/clap", "fuel-events-manager/clap"]
test-helpers = ["rocksdb", "fuel-receipts-manager/test-helpers", "fuel-events-manager/test-helpers"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
fuel-core = { workspace = true, optional = true }
fuel-core-client = { workspace = true }
fuel-core-services = { workspace = true }
fuel-core-types = { workspace = true }
fuel-events-manager = { workspace = true }
fuel-indexer-types = { workspace = true }
fuel-receipts-manager = { workspace = true }
fuels = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serde_json = "1.0.145"
