[package]
name = "fuel-events-manager"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
path = "lib.rs"

[features]
rocksdb = [
    "dep:fuel-core",
    "fuel-core/rocksdb-production",
    "fuel-storage-utils/rocksdb",
]
clap = ["dep:clap"]
test-helpers = ["rocksdb", "fuel-storage-utils/test-helpers"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, optional = true }
enum-iterator = { workspace = true }
fuel-core = { workspace = true, optional = true }
fuel-core-services = { workspace = true }
fuel-core-storage = { workspace = true }
fuel-core-types = { workspace = true, features = ["serde", "test-helpers"] }
fuel-indexer-types = { workspace = true }
fuel-storage-utils = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["full"] }
tracing = { workspace = true }
