[package]
name = "fuel-storage-utils"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
fuel-core = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
fuel-core-storage = { workspace = true }

[features]
rocksdb = [
    "dep:fuel-core",
    "dep:serde",
    "fuel-core/rocksdb-production",
]
